# wxToxToy

./: .gitignore  CMakeLists.txt  README.md  wxtoxgui.fbp
cmake-scripts/: Findsodium.cmake  Findtox.cmake  Findwxwidgets3.cmake
src/: addfrienddialog.cpp  addfrienddialog.h  app.cpp  app.h  convframe.cpp  convframe.h  icon-32.xpm  license.h  log.cpp  log.h  settingsdialog.cpp  settingsdialog.h  toxfriend.cpp  toxfriend.h  utils.cpp  utils.h  wxtoxframe.cpp  wxtoxframe.h  wxtoxgui.cpp  wxtoxgui.h  wxtoxtick.cpp  wxtoxtick.h
